<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/TaxIncomeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EnterIncomeTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"/>

    <TextView
        android:id="@+id/EnterIncomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/TaxableIncomeTE"
        android:textColor="@android:color/background_light"/>


    <TextView
        android:id="@+id/SelectFSTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TaxIncomeEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/FilingStatusRG"
        android:textColor="@android:color/background_light"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/SelectFSTextView"
        android:layout_alignLeft="@+id/TaxIncomeEditText"
        android:layout_alignStart="@+id/TaxIncomeEditText"
        android:layout_marginTop="34dp">

        <RadioButton
            android:id="@+id/SingleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/MFJonintlyRadioButton"
            android:layout_alignStart="@+id/MFJonintlyRadioButton"
            android:layout_below="@+id/MFJonintlyRadioButton"
            android:layout_weight="1"
            android:text="@string/SingleRB"
            android:textColor="@android:color/background_light"
            tools:ignore="ObsoleteLayoutParam"/>

        <RadioButton
            android:id="@+id/HeadOfHouseholdRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/HeadOfHouseholdRB"
            android:textColor="@android:color/background_light"/>

        <RadioButton
            android:id="@+id/MFJonintlyRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/radioGroup"
            android:layout_centerHorizontal="true"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/MarriedFilingJointlyRB"
            android:textColor="@android:color/background_light"
            tools:ignore="ObsoleteLayoutParam,RtlHardcoded"/>

        <RadioButton
            android:id="@+id/MFSeparatelyRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/radioGroup"

            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/radioGroup"
            android:layout_gravity="left"
            android:layout_marginBottom="121dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/MarriedFilingSeparatelyRB"
            android:textColor="@android:color/background_light"
            tools:ignore="ObsoleteLayoutParam,RtlHardcoded"/>

    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:text="@string/TaxDue"
        tools:ignore="ObsoleteLayoutParam"/>


</RelativeLayout>